syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.proto";
option java_multiple_files = true;

message BurnEventData {
    bytes supplyManager = 1; // Address
    bytes value = 2; // BigInteger
}
